# DevPilot-AI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: code_understanding.py  documentation.py  graph.py  review.py  state.py  test_generator.py
app/api/: dependencies.py
app/api/routes/: health.py  ingest.py  query.py  webhook.py
app/core/: cache.py  errors.py  formatting.py  llm.py  metrics.py
app/models/: schemas.py
app/rag/: chunker.py  embeddings.py  retriever.py  vectorstore.py
app/services/: client.py  parser.py  webhook_handler.py
app/services/agents/: code_understanding.py  documentation.py  graph.py  review.py  test_generator.py
app/services/github/: client.py  parser.py  webhook_handler.py
app/services/rag/: chunker.py  embeddings.py  retriever.py  vectorstore.py
app/utils/: cache.py  errors.py  llm.py  logging.py  metrics.py
docker/: docker-compose.yml
tests/: conftest.py
tests/test_api/: test_ingest.py  test_query.py  test_webhook.py
tests/test_core/: test_cache.py  test_errors.py  test_metrics.py
tests/test_services/: test_agents.py  test_chunker.py  test_graph.py  test_retriever.py
